[package]
name = "sycamore-query"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Data fetching and caching for sycamore"
repository = "https://github.com/wingertge/sycamore-query"
readme = "README.md"
keywords = ["wasm", "reactive", "fetch", "caching"]
categories = ["web-programming", "wasm", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.8", features = ["suspense"] }
fnv = "1"
weak-table = "0.3"
fluvio-wasm-timer = "0.2"
log = "0.4"